--- a/package.json
+++ b/package.json
@@ -12,6 +12,6 @@
     "start": "node server.js",
     "watch": "nodemon server.js"
   },
-  "author": "",
+  "author": "silpa",
   "license": "ISC"
 }
